# python-fastapi-backend

./: .env  Dockerfile  README.md  alembic.ini  app.py  ecs-task-def.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 8b75ff5e5f40_add_supplier_id_to_products.py  edcbcda6dad3_create_tables.py
database/: dependencies.py  session.py
database/models/: __init__.py  product.py  supplier.py
repository/: product.py  supplier.py
routes/: product.py  supplier.py
schemas/: common.py  product.py  supplier.py
services/: dependencies.py  product.py  supplier.py
